--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,7 +1,7 @@
 /* color palette */
 :root {
   --white: #fff;
-  --gold: #BD945A;
+  --gold: #63153a;
   --black: #000;
   --black-light: #525252;
   --grey-strong: #888;
